--- a/doc/v1.md
+++ b/doc/v1.md
@@ -1,3 +1,4 @@
 ** release vesion 1 **
-# Làm quen với flask , tạo được localhost và tạo được giao diện theo ý muốn
+# Làm quen với flask , tạo được localhost 
+# tạo được gaio diện đăng nhập, đăng ký ( tuy nhiên mới chỉ hiện lên giao diện chứ chưa thực hiện được chức năng)
 
