--- a/doc/v1.md
+++ b/doc/v1.md
@@ -2,3 +2,4 @@
 # Làm quen với flask , tạo được localhost 
 # tạo được gaio diện đăng nhập, đăng ký ( tuy nhiên mới chỉ hiện lên giao diện chứ chưa thực hiện được chức năng)
 
+![alt text](image.png)
